// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button with large size, black variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-base gap-3 px-6 py-3 rounded-xl from-black to-zinc-900 text-white border-white/25 ring-black active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with large size, black variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-base gap-3 px-6 py-3 rounded-xl bg-black text-white !border-0 !ring-0 dark:bg-white dark:text-black active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with large size, indigo variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-base gap-3 px-6 py-3 rounded-xl from-indigo-600 to-indigo-700 text-white border-white/25 ring-indigo-900 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with large size, indigo variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-base gap-3 px-6 py-3 rounded-xl bg-indigo-600 text-white !border-0 !ring-0 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with large size, white variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-base gap-3 px-6 py-3 rounded-xl from-zinc-200 to-white text-zinc-800 border-zinc-300 ring-zinc-500 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with large size, white variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-base gap-3 px-6 py-3 rounded-xl bg-white text-black ring-zinc-400 !border-0 !ring-1 dark:bg-zinc-950 dark:text-white dark:ring-zinc-800 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with medium size, black variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-sm gap-2.5 px-5 py-2.5 rounded-[10px] from-black to-zinc-900 text-white border-white/25 ring-black active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with medium size, black variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-sm gap-2.5 px-5 py-2.5 rounded-[10px] bg-black text-white !border-0 !ring-0 dark:bg-white dark:text-black active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with medium size, indigo variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-sm gap-2.5 px-5 py-2.5 rounded-[10px] from-indigo-600 to-indigo-700 text-white border-white/25 ring-indigo-900 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with medium size, indigo variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-sm gap-2.5 px-5 py-2.5 rounded-[10px] bg-indigo-600 text-white !border-0 !ring-0 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with medium size, white variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-sm gap-2.5 px-5 py-2.5 rounded-[10px] from-zinc-200 to-white text-zinc-800 border-zinc-300 ring-zinc-500 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with medium size, white variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-sm gap-2.5 px-5 py-2.5 rounded-[10px] bg-white text-black ring-zinc-400 !border-0 !ring-1 dark:bg-zinc-950 dark:text-white dark:ring-zinc-800 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with small size, black variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-xs gap-2 px-4 py-2 rounded-lg from-black to-zinc-900 text-white border-white/25 ring-black active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with small size, black variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-xs gap-2 px-4 py-2 rounded-lg bg-black text-white !border-0 !ring-0 dark:bg-white dark:text-black active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with small size, indigo variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-xs gap-2 px-4 py-2 rounded-lg from-indigo-600 to-indigo-700 text-white border-white/25 ring-indigo-900 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with small size, indigo variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-xs gap-2 px-4 py-2 rounded-lg bg-indigo-600 text-white !border-0 !ring-0 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with small size, white variants, and gradient mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-xs gap-2 px-4 py-2 rounded-lg from-zinc-200 to-white text-zinc-800 border-zinc-300 ring-zinc-500 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button with small size, white variants, and simple mode 1`] = `
<DocumentFragment>
  <button
    class="flex items-center border-2 border-b-0 bg-gradient-to-t font-medium shadow-md ring-2 transition-opacity duration-200 ease-in-out hover:opacity-90 focus-visible:opacity-90 active:scale-95 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-25 text-xs gap-2 px-4 py-2 rounded-lg bg-white text-black ring-zinc-400 !border-0 !ring-1 dark:bg-zinc-950 dark:text-white dark:ring-zinc-800 active:opacity-100"
  >
    <span
      class="pointer-events-none drop-shadow-sm"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;
